# Luminovo-test

./: .env  .gitpod.Dockerfile  .gitpod.yml  Cargo.toml  Makefile  README.MD
migrations/2021-05-07-215025_create_users/: up.sql
src/: db_connection.rs  errors.rs  main.rs
src/db/: README.MD  mod.rs  requests.rs  users.rs
src/mocks/: api.rs
src/routes/: README.MD  mod.rs  search.rs
src/search/: README.MD  highlighting.rs  mod.rs
